# github-mcp-client

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
github_mcp_client/: .env.example  main.py  requirements.txt
src/github_mcp_client/: __init__.py  __main__.py  chat.py  client.py  config.py  server.py  tools.py
